...
            horizontalArrangement = Arrangement.End
        ) {
            RevealActionButton(
                background = MaterialTheme.colorScheme.primaryContainer,
                onClick = onEdit
            ) {
                Icon(Icons.Default.Edit, "编辑", tint = MaterialTheme.colorScheme.onPrimaryContainer)
            }
            RevealActionButton(
                background = MaterialTheme.colorScheme.primaryContainer,
                onClick = onToggleHide
            ) {
                Icon(
...
